--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <canvas id="rain-bg"></canvas>
     <div class="container">
         <button id="toggle-theme" aria-label="Alternar tema">🌙</button>
-        <img src="Imagem/Dev.jpg" alt="Sua Foto" class="profile-pic">
-        <h1>Dev.D</h1>
+        <img src="Imagem/PRO.png" alt="Sua Foto" class="profile-pic">
+        <h1>D.Anderson</h1>
         <ul class="links">
             <li><a href="https://www.instagram.com/d.gomesxx/profilecard/?igsh=d2s0OWxsbjA1OTRp" target="_blank">Instagram</a></li>
             <li><a href="https://github.com/DevADOBAN" target="_blank">GitHub</a></li>
@@ -81,4 +81,5 @@ function drawRain() {
 drawRain();
     </script>
 </body>
+
 </html>
